# Hemiola

./: .clang-format  CMakeLists.txt  Doxyfile  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/linters/: .jscpd.json  CPPLINT.cfg
.github/workflows/: cmake.yml  super-linter.yml
cmake/: External.cmake  fmt.cmake  nuspell.cmake  spdlog.cmake  yaml-cpp.cmake
config/: settings.yml
hid/: enableModules.sh  hemiola_usb  install.sh  testHID.py
include/: Anagram.h  Anagrammer.h  Device.h  Exceptions.h  HID.h  Hemiola.h  InputHID.h  KeyChords.h  KeyReport.h  KeyTable.h  Keyboard.h  KeyboardEvents.h  Logger.h  OutputHID.h  USBHID.h  Utils.h
src/: Anagram.cpp  Anagrammer.cpp  Device.cpp  HID.cpp  Hemiola.cpp  InputHID.cpp  KeyChords.cpp  KeyTable.cpp  Keyboard.cpp  KeyboardEvents.cpp  Logger.cpp  OutputHID.cpp  USBHID.cpp  hemiola.cpp
tests/: AnagramTest.cpp  AnagrammerTest.cpp  CMakeLists.txt  HemiolaTest.cpp  KeyTableTest.cpp  KeyboardEventTest.cpp
tests/fakes/: CMakeLists.txt  FakeDevice.cpp  FakeDevice.h  FakeInputHID.cpp
tests/fakes/include/: FakeDevice.h  FakeInputHID.h
